@@ -31,6 +31,7 @@
 - Use /tmp for default monitoring endpoint location for libbeat {pull}18131[18131]
 - Fix panic and flaky tests for the Agent. {pull}18135[18135]
 - Fix default configuration after enroll {pull}18232[18232]
+- Fix make sure the collected logs or metrics include streams information. {pull}18261[18261]
 
 ==== New features
 
